fixed the main image not showing in Chrome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,11 +61,10 @@ p {
 
 /* Main Section */
 
-.hero {
-    height: 800px;
-    width: 100%;
+.hero img{
+/*  height: 800px; */
+/*  width: 100%;  */
     margin-bottom: 25px;
-    background-image: url("./assets/images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
